--- a/commerce/app/views/layouts/_nav.html.erb
+++ b/commerce/app/views/layouts/_nav.html.erb
@@ -4,4 +4,6 @@
   <%= link_to 'Login', login_path, method: :get %>
 <% end %>
 <%= link_to 'Items', items_path %>
-<%= button_to "Cart (#{load_cart.count_items})", cart_index_path, method: :get %>
+<%= button_to cart_index_path, method: :get, class: "btn btn-success"  do %>
+    <span class="glyphicon glyphicon-shopping-cart"></span> <%= "Cart (#{load_cart.count_items})" %>
+<% end %>
